manifests/dev/infrastructure/controllers/cnpg/v1_service_cnpg-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: cnpg
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/version: 1.25.0
    helm.sh/chart: cloudnative-pg-0.23.0
  name: cnpg-webhook-service
  namespace: cnpg-system
spec:
  ports:
  - name: webhook-server
    port: 443
    targetPort: webhook-server
  selector:
    app.kubernetes.io/instance: cnpg
    app.kubernetes.io/name: cloudnative-pg
  type: ClusterIP
